fixed modal issues that includes: overflow, scroll, modal max-height and scrollbars (#73)

--- a/src/components/form/ChainSelector.module.scss
+++ b/src/components/form/ChainSelector.module.scss
@@ -25,23 +25,39 @@
 
 .options {
   position: absolute;
-  transform: translate(0, 4px);
   width: 100%;
-
   padding: 4px 0;
   background-color: var(--card-bg);
   border-radius: var(--border-radius);
   border: var(--border-width) solid var(--card-border);
   z-index: 10;
+  box-shadow: 0px 5px 7px 0px var(--wallet-shadow-color);
 
   .options__container {
-    margin: 0 6px;
-    max-height: 200px;
+    margin-left: 6px;
+    height: 100%;
     overflow-y: scroll;
+    max-height: 125px;
+    margin-top: 0;
+
+    &::-webkit-scrollbar {
+      width: 12px;
+      display: block;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      border-radius: 16px;
+      background-color: var(--button-default-bg);
+      border: 2px solid var(--card-bg);
+    }
+
+    &::-webkit-scrollbar-track {
+      background-color: transparent;
+    }
   }
 
   .options__container__small {
-    max-height: 100px;
+    max-height: 125px;
   }
 
   button {
