--- a/src/pages/custom/TokenList.module.scss
+++ b/src/pages/custom/TokenList.module.scss
@@ -1,4 +1,4 @@
 .results {
-  height: 360px;
+  height: 335px;
   overflow-y: auto;
 }
