--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -94,6 +94,8 @@
   --extension-bg: var(--card-bg);
   --extension-text: var(--text);
 
+  --wallet-shadow-color: rgb(0 0 0 / 31%);
+
   @include mobile {
     --menu-bg: var(--card-bg);
     --menu-border: var(--card-border);
@@ -148,6 +150,8 @@
 
   --extension-bg: var(--card-bg);
   --extension-text: var(--text);
+
+  --wallet-shadow-color: #0000009c;
 }
 
 .blossom {
@@ -191,6 +195,8 @@
 
   --extension-bg: hsl(340 100% 90%);
   --extension-text: hsl(341 100% 62%);
+
+  --wallet-shadow-color: rgb(63 63 63 / 22%);
 }
 
 .moon {
@@ -236,6 +242,8 @@
 
   --extension-bg: hsl(247 55% 6%);
   --extension-text: hsl(46 100% 90%);
+
+  --wallet-shadow-color: #000000c7;
 }
 
 .whale {
@@ -279,6 +287,8 @@
 
   --extension-bg: hsl(0 0% 100%);
   --extension-text: hsl(0 0% 27%);
+
+  --wallet-shadow-color: rgb(0 0 0 / 31%);
 
   --warning: hsl(356 100% 50%);
   --warning-light: hsl(356 100% 50% / 0.1);
@@ -325,6 +335,8 @@
 
   --extension-bg: hsl(260 66% 37%);
   --extension-text: hsl(116 100% 83%);
+
+  --wallet-shadow-color: #000000c7;
 
   --info: hsl(178 91% 52%);
   --info-light: hsl(178 91% 52% / 0.1);
